# yomi

./: README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/architecture/sequence-diagrams/: get-archive-page.md  manga-reading.md
src/: App.tsx  global-store.ts  main.tsx  provider.tsx  style.css
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/enums/: mod.rs  source_type.rs
src-tauri/src/models/: chapter.rs  manga.rs  mod.rs  page.rs  zip_reader.rs
src-tauri/src/protocol/: archive_page.rs  mod.rs
src-tauri/src/traits/: archive_reader.rs  manga_source.rs  mod.rs
src/assets/lottie/: 404.json  calendar.json  create.json  data-uploading.json  empty-box.json  empty-person.json  error-cat-2.json  error-cat.json  error.json  failed.json  gear.json  hamster.json  hide.json  next-arrow.json  queue.json  rocket.json  server.json  success.json  timeout.json  triangle-loading.json
src/components/crash/: crash.tsx  index.ts
src/enums/: path.ts
src/pages/manga/: index.ts  manga.tsx
src/pages/manga-detail/: index.ts  manga-detail.tsx
src/pages/manga-layout/: index.ts  manga-layout.tsx
src/pages/mangas/: index.ts  mangas.tsx  mock-data.ts
src/pages/not-found/: not-found.tsx
src/types/: manga.d.ts
src/ui/fallback/: crash-fallback.tsx  empty-fallback.tsx  error-fallback.tsx  failed-fallback.tsx  fallback.tsx  index.ts  loading-fallback.tsx  notfound-fallback.tsx  success-fallback.tsx  types.ts
src/ui/manga-card/: index.ts  manga-card.tsx
